parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr08.wacc
# type mismatch: char <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  char c = false
end
